--- a/app/views/tasks/destroy.html.erb
+++ b/app/views/tasks/destroy.html.erb
@@ -1,2 +1,4 @@
 <h1>Tasks#destroy</h1>
-<p>Find me in app/views/tasks/destroy.html.erb</p>
+<%= link_to "Delete", restaurant_path(restaurant),
+      method: :delete,
+      data: { confirm: "Are you sure?" } %>
