--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,2 +1,13 @@
 <h1>Tasks#edit</h1>
-<p>Find me in app/views/tasks/edit.html.erb</p>
+<br>
+<form action="/tasks/<%=@task.id%>" method="post">
+  <label for="name">Name: </label>
+  <input type="text" name="task[name]" id="name" value="<%=@task.name%>">
+
+  <label for="description">Description: </label>
+  <input type="text" name="task[description]" id="description" value="<%=@task.description%>">
+  <input type="hidden" name="_method" value="patch" />
+  <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
+
+  <input type="submit">
+</form>
