--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,2 +1,10 @@
 <h1>Tasks#show</h1>
-<p>Find me in app/views/tasks/show.html.erb</p>
+
+<h3>Task id : <%=@task.id%></h3>
+<h2><%=@task.name%></h2>
+<p>Task description : <%=@task.description%></p>
+
+<p>Date of creation: <%=@task.created_at%></p>
+<p>Date of update: <%=@task.updated_at%></p>
+
+<%= link_to "Index page :)", "/tasks"%>
