--- a/app/views/tasks/destroy.html.erb
+++ b/app/views/tasks/destroy.html.erb
@@ -1,4 +1,4 @@
 <h1>Tasks#destroy</h1>
-<%= link_to "Delete", restaurant_path(restaurant),
+<%= link_to "Delete", task_path(@task),
       method: :delete,
       data: { confirm: "Are you sure?" } %>
