--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,9 +3,11 @@
 <% @tasks.each do |task| %>
   <h2><%= task.name %></h2>
   <p><%= task.description %></p>
-  <%= link_to "Show task page", "/tasks/#{task.id}" %>
-  <%= link_to "Edit task", "/tasks/#{task.id}/edit" %>
-  <%= link_to "Delete task", "/tasks/#{task.id}", method: :delete %>
+  <%= link_to "Show task page", edit_task(task) %>
+  <%= link_to "Edit task", task_path(task) %>
+  <%= link_to "Delete", tasks_path,
+      method: :delete,
+      data: { confirm: "Are you sure?" } %>
 <% end %>
 
 <p><%= link_to "Create task", "/tasks/new" %></p>
