--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -3,7 +3,7 @@
 <% @tasks.each do |task| %>
   <h2><%= task.name %></h2>
   <p><%= task.description %></p>
-  <%= link_to "Show task page", edit_task(task) %>
+  <%= link_to "Show task page", edit_task_path(task) %>
   <%= link_to "Edit task", task_path(task) %>
   <%= link_to "Delete", tasks_path,
       method: :delete,
