--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -5,7 +5,7 @@
   <p><%= task.description %></p>
   <%= link_to "Show task page", edit_task_path(task) %>
   <%= link_to "Edit task", task_path(task) %>
-  <%= link_to "Delete", tasks_path,
+  <%= link_to "Delete",  task_path(task),
       method: :delete,
       data: { confirm: "Are you sure?" } %>
 <% end %>
